--- a/assets/webconfig/lang/de.json
+++ b/assets/webconfig/lang/de.json
@@ -7,7 +7,10 @@
 		"lighttesttoken":"Farbe: ",
 		"Light test":"Lichttest",
 		"menulighttesttoken":"Lichttest",
-		"buttoncolorresettoken":"Farbe zurücksetzen"
+		"buttoncolorresettoken":"Farbe zurücksetzen",
+		"menueffectstoken":"Effekte",
+		"buttoneffectstoptoken":"Stoppe Effekte",
+		"menuremotecontroltoken":"Fernbedienung"
 	},
 	"regex": [
 		["^Something at start of text", ""],
