Translation: Renamed tokens to unified style

--- a/assets/webconfig/lang/de.json
+++ b/assets/webconfig/lang/de.json
@@ -2,12 +2,12 @@
 	"token": {
 		"English":"Englisch",
 		"German":"Deutsch",
-		"lighttesttoken":"Farbe: ",
-		"menulighttesttoken":"Lichttest",
-		"buttoncolorresettoken":"Farbe zurücksetzen",
-		"menueffectstoken":"Effekte",
-		"buttoneffectstoptoken":"Stoppe Effekte",
-		"menuremotecontroltoken":"Fernbedienung",
+		"light_test_token":"Farbe: ",
+		"menu_light_test_token":"Lichttest",
+		"button_color_reset_token":"Farbe zurücksetzen",
+		"menu_effects_token":"Effekte",
+		"button_effect_stop_token":"Stoppe Effekte",
+		"menu_remote_control_token":"Fernbedienung",
 		"hue_failure_ip_token":"Bitte überprüfe deine IP Adresse.",
 		"Username:":"Benutzername:",
 		"hue_button_create_user_token":"Benutzer anlegen",
