--- a/assets/webconfig/lang/de.json
+++ b/assets/webconfig/lang/de.json
@@ -1,19 +1,62 @@
 {
 	"token": {
-		"English":"Englisch",
-		"German":"Deutsch",
-		"lighttesttoken":"Farbe: ",
-		"menulighttesttoken":"Lichttest",
-		"buttoncolorresettoken":"Farbe zurücksetzen",
-		"menueffectstoken":"Effekte",
-		"buttoneffectstoptoken":"Stoppe Effekte",
-		"menuremotecontroltoken":"Fernbedienung",
-		"hue_failure_ip_token":"Bitte überprüfe deine IP Adresse.",
-		"Username:":"Benutzername:",
+		"general_country_de" : "Deutschland",
+		"general_country_us" : "Amerika",
+		"general_country_uk" : "England",
+		"general_country_fr" : "Frankreich",
+		"general_country_es" : "Spanien",
+		"general_country_it" : "Italien",
+		"general_country_nl" : "Niederlande",
+		"general_speech_de" : "Deutsch",
+		"general_speech_en" : "Englisch",
+		"dashboard_label_intro" : "Das Dashboard zeigt dir Informationen zum Systemstatus, ob Updates verfügbar sind, den Komponenten Status sowie die letzten Blog-Posts vom Hyperion Team",
+		"dashboard_label_infobox_title" : "Informationen",
+		"dashboard_label_infobox_currenthyp" : "Deine Hyperion Version:",
+		"dashboard_label_infobox_latesthyp" : "Aktuellste Hyperion Version:",
+		"dashboard_label_infobox_device" : "Geräteinformation:",
+		"dashboard_label_componentbox_title" : "Komponenten Status",
+		"dashboard_label_newsbox_title" : "Die letzten Blogposts",
+		"main_menu_dashboard_token" : "Dashboard",
+		"main_menu_configuration_token" : "Konfiguration",
+		"main_menu_kodiwatch_token" : "Kodi Überwachung",
+		"main_menu_huebridge_token" : "Hue Bridge",
+		"main_menu_remotecontrol_token" : "Fernbedienung",
+		"main_menu_colors_token" : "Farben",
+		"main_menu_effects_token" : "Effekte",
+		"main_menu_support_token" : "Hilfe",
+		"remote_colors_label_color":"Farbe: ",
+		"remote_colors_button_reset":"Farbe zurücksetzen",
+		"remote_effects_intro" : "Die Effekt-Fernbedienung ermöglicht es dir Effekte zu starten für Demonstrations- oder Testzwecke. Vergessse nicht den Effekt wieder zu stoppen, wenn du fertig bist.",
+		"remote_effects_label_effects":"Effekte",
+		"remote_effects_label_stopeffect":"Stoppe Effekte",
 		"hue_button_create_user_token":"Benutzer anlegen",
 		"hue_press_link_modal":"Link Taste auf der Hue Bridge drücken und mit Button bestätigen.",
 		"hue_press_link_modal_failure":"Bitte drücke die Link Taste auf deiner Hue Bridge.",
-		"hue_button_pair":"Verbinden"
+		"hue_button_pair":"Verbinden",
+		"hue_failure_ip_token":"Bitte überprüfe deine IP Adresse.",
+		"hue_label_username":"Benutzername:",
+		"conf_kodi_label_title" : "Kodi Überwachung",
+		"conf_kodi_label_intro" : "Die Kodi Überwachung ermöglicht es dir abhängig von dem Kodi Status dein ambient light an oder abzuschalten. Dies ist nicht limitiert auf das selbe Gerät. Du kannst jedes Kodi in deinem lokalen Netzwerk überwachen lassen.",
+		"support_label_title" : "Unterstütze Hyperion",
+		"support_label_intro" : "Hyperion ist ein kostenloses Open Source Projekt und ein kleines Team arbeitet an seiner Weiterentwicklung. Darum benötigen wir DEINE Unterstützung um den Ball weiter rollen zu lassen und um weiter in bessere Infrastruktur und Weiterentwicklung investieren zu können.",
+		"support_label_spreadtheword" : "Weitersagen!",
+		"support_label_fbtext" : "Teile Inhalte in Facebook und halte dich und andere auf dem Laufenden",
+		"support_label_twtext" : "Nutze die 140 Zeichen und bleibe auf dem Laufenden auch auf Twitter",
+		"support_label_ggtext" : "Platziere uns in deinen Kreisen auf Google+",
+		"support_label_yttext" : "Gelangweilt von Bildern? Werfe einen Blick auf unsere Youtube Videos",
+		"support_label_donate" : "Spende oder füge unsere Affiliate Links als Lesezeichen hinzu",
+		"support_label_affinstr1" : "Klicke auf den Link deines Landes",
+		"support_label_affinstr2" : "Kaufe wie gewohnt ein, abhängig von deinem Umsatz bekommen wir eine kleine Provision",
+		"support_label_affinstr3" : "Du zahlst immer den selben Preis. Teste es!",
+		"support_label_btctext" : "Adresse:",
+		"support_label_donationpp" : "Spende:",
+		"support_label_webrestitle" : "Informationsquellen und Hilfe",
+		"support_label_webpagetitle" : "Internetseite",
+		"support_label_webpagetext" : "Das Zuhause von Hyperion",
+		"support_label_wikititle" : "Wiki",
+		"support_label_wikitext" : "Von A bis Z - Alles wissenwerte zu Hyperion",
+		"support_label_forumtitle" : "Forum",
+		"support_label_forumtext" : "Diskussion und Hilfestellung von der Community"
 	},
 	"regex": [
 		["^Something at start of text", ""],
