--- a/assets/webconfig/lang/de.json
+++ b/assets/webconfig/lang/de.json
@@ -25,6 +25,7 @@
 		"main_menu_remotecontrol_token" : "Fernbedienung",
 		"main_menu_colors_token" : "Farben",
 		"main_menu_effects_token" : "Effekte",
+		"main_menu_component_token" : "Komponenten",
 		"main_menu_support_token" : "Hilfe",
 		"main_menu_update_token" : "Update",
 		"main_menu_system_token" : "System",
@@ -34,6 +35,7 @@
 		"remote_effects_intro" : "Die Effekt-Fernbedienung ermöglicht es dir Effekte zu starten für Demonstrations- oder Testzwecke. Vergessse nicht den Effekt wieder zu stoppen, wenn du fertig bist.",
 		"remote_effects_label_effects":"Effekte",
 		"remote_effects_label_stopeffect":"Stoppe Effekte",
+		"remote_components_intro" : "Die Komponenten-Fenbedienung ermöglicht es dir Komponenten von Hyperion zu starten und stoppen. Beachte: Dies ist nur temporär und geht nach einem Neustart verloren. Möchtest du dauerhaft Komponenten aktivieren/deaktivieren benutze die Konfigurationsseiten.",
 		"hue_button_create_user_token":"Benutzer anlegen",
 		"hue_press_link_modal":"Link Taste auf der Hue Bridge drücken und mit Button bestätigen.",
 		"hue_press_link_modal_failure":"Bitte drücke die Link Taste auf deiner Hue Bridge.",
