--- a/assets/webconfig/lang/de.json
+++ b/assets/webconfig/lang/de.json
@@ -13,7 +13,8 @@
 		"dashboard_label_infobox_title" : "Informationen",
 		"dashboard_label_infobox_currenthyp" : "Deine Hyperion Version:",
 		"dashboard_label_infobox_latesthyp" : "Aktuellste Hyperion Version:",
-		"dashboard_label_infobox_device" : "Geräteinformation:",
+		"dashboard_label_infobox_leddevice" : "LED Typ:",
+		"dashboard_label_infobox_device" : "Systeminformation:",
 		"dashboard_label_componentbox_title" : "Komponenten Status",
 		"dashboard_label_newsbox_title" : "Die letzten Blogposts",
 		"dashboard_message_infobox_updatewarning" : "Eine aktuellere Version von Hyperion ist verfügbar!",
