--- a/assets/webconfig/lang/de.json
+++ b/assets/webconfig/lang/de.json
@@ -30,6 +30,7 @@
 		"main_menu_support_token" : "Hilfe",
 		"main_menu_update_token" : "Update",
 		"main_menu_system_token" : "System",
+		"main_menu_input_selection_token" : "Eingabeauswahl",
 		"main_menu_general_conf_token":"Allgemein",
 		"remote_colors_label_color":"Farbe: ",
 		"remote_colors_button_reset":"Farbe zurücksetzen",
@@ -70,21 +71,7 @@
 		"update_button_install" : "Installieren",
 		"update_button_changelog" : "Zeige Änderungsprotokoll",
 		"update_label_type" : "Art:",
-		"remote_general_conf_intro" : "Hier kannst du allgemeine Einstellungen von Hyperion vornehmen.",
-		"generalConfForm_jsonform-0-elt-logger.level" : "Stufe Logging",
-		"generalConfForm_jsonform-0-elt-jsonServer.port" : "Port",
-		"generalConfForm_jsonform-0-elt-protoServer.port" : "Port",
-		"generalConfForm_jsonform-0-elt-boblightServer.enable" : "Aktivieren",
-		"generalConfForm_jsonform-0-elt-boblightServer.port" : "Port",
-		"generalConfForm_jsonform-0-elt-boblightServer.priority" : "Prioität",
-		"generalConfForm_jsonform-0-elt-udpListener.address" : "IP-Addresse",
-		"generalConfForm_jsonform-0-elt-udpListener.enable" : "Aktivieren",
-		"generalConfForm_jsonform-0-elt-udpListener.port" : "Port",
-		"generalConfForm_jsonform-0-elt-udpListener.priority" : "Prioität",
-		"generalConfForm_jsonform-0-elt-udpListener.shared" : "Shared",
-		"generalConfForm_jsonform-0-elt-udpListener.timeout" : "Timeout",
-		"generalConfForm_jsonform-0-elt-webConfig.document_root" : "Root Verzeichnis",
-		"generalConfForm_jsonform-0-elt-webConfig.enable" : "Aktivieren"
+		"remote_general_conf_intro" : "Hier kannst du allgemeine Einstellungen von Hyperion vornehmen."
 	},
 	"regex": [
 		["^Something at start of text", ""],
