--- a/assets/webconfig/lang/de.json
+++ b/assets/webconfig/lang/de.json
@@ -32,6 +32,7 @@
 		"main_menu_system_token" : "System",
 		"main_menu_input_selection_token" : "Eingabeauswahl",
 		"main_menu_general_conf_token":"Allgemein",
+		"main_menu_leds_conf_token":"LEDs",
 		"remote_colors_label_color":"Farbe: ",
 		"remote_colors_button_reset":"Farbe zurücksetzen",
 		"remote_effects_intro" : "Die Effekt-Fernbedienung ermöglicht es dir Effekte zu starten für Demonstrations- oder Testzwecke. Vergessse nicht den Effekt wieder zu stoppen, wenn du fertig bist.",
@@ -39,8 +40,8 @@
 		"remote_effects_label_stopeffect":"Stoppe Effekte",
 		"remote_components_intro" : "Die Komponenten-Fenbedienung ermöglicht es dir Komponenten von Hyperion zu starten und stoppen. Beachte: Dies ist nur temporär und geht nach einem Neustart verloren. Möchtest du dauerhaft Komponenten aktivieren/deaktivieren benutze die Konfigurationsseiten.",
 		"hue_button_create_user_token":"Benutzer anlegen",
-		"hue_press_link_modal":"Link Taste auf der Hue Bridge drücken und mit Button bestätigen.",
-		"hue_press_link_modal_failure":"Bitte drücke die Link Taste auf deiner Hue Bridge.",
+		"hue_press_link_modal":"Bitte Link Taste auf der Hue Bridge drücken.",
+		"hue_failure_connection_token":"Connection Timeout. Bitte drücke die Taste rechtzeitig.",
 		"hue_button_pair":"Verbinden",
 		"hue_failure_ip_token":"Bitte überprüfe deine IP Adresse.",
 		"hue_label_username":"Benutzername:",
