--- a/assets/webconfig/lang/de.json
+++ b/assets/webconfig/lang/de.json
@@ -31,20 +31,21 @@
 		"main_menu_update_token" : "Update",
 		"main_menu_system_token" : "System",
 		"main_menu_input_selection_token" : "Eingabeauswahl",
-		"main_menu_general_conf_token":"Allgemein",
-		"main_menu_leds_conf_token":"LEDs",
-		"remote_colors_label_color":"Farbe: ",
-		"remote_colors_button_reset":"Farbe zurücksetzen",
+		"main_menu_general_conf_token" : "Allgemein",
+		"main_menu_leds_conf_token" : "LEDs",
+		"main_menu_grabber_conf_token" : "Aufnahme Hardware",
+		"remote_colors_label_color" : "Farbe: ",
+		"remote_colors_button_reset" : "Farbe zurücksetzen",
 		"remote_effects_intro" : "Die Effekt-Fernbedienung ermöglicht es dir Effekte zu starten für Demonstrations- oder Testzwecke. Vergessse nicht den Effekt wieder zu stoppen, wenn du fertig bist.",
-		"remote_effects_label_effects":"Effekte",
-		"remote_effects_label_stopeffect":"Stoppe Effekte",
+		"remote_effects_label_effects" : "Effekte",
+		"remote_effects_label_stopeffect" : "Stoppe Effekte",
 		"remote_components_intro" : "Die Komponenten-Fenbedienung ermöglicht es dir Komponenten von Hyperion zu starten und stoppen. Beachte: Dies ist nur temporär und geht nach einem Neustart verloren. Möchtest du dauerhaft Komponenten aktivieren/deaktivieren benutze die Konfigurationsseiten.",
-		"hue_button_create_user_token":"Benutzer anlegen",
-		"hue_press_link_modal":"Bitte Link Taste auf der Hue Bridge drücken.",
-		"hue_failure_connection_token":"Connection Timeout. Bitte drücke die Taste rechtzeitig.",
-		"hue_button_pair":"Verbinden",
-		"hue_failure_ip_token":"Bitte überprüfe deine IP Adresse.",
-		"hue_label_username":"Benutzername:",
+		"hue_button_create_user_token" : "Benutzer anlegen",
+		"hue_press_link_modal" : "Bitte Link Taste auf der Hue Bridge drücken.",
+		"hue_failure_connection_token" : "Connection Timeout. Bitte drücke die Taste rechtzeitig.",
+		"hue_button_pair" : "Verbinden",
+		"hue_failure_ip_token" : "Bitte überprüfe deine IP Adresse.",
+		"hue_label_username" : "Benutzername:",
 		"conf_kodi_label_title" : "Kodi Überwachung",
 		"conf_kodi_label_intro" : "Die Kodi Überwachung ermöglicht es dir abhängig von dem Kodi Status dein ambient light an oder abzuschalten. Dies ist nicht limitiert auf das selbe Gerät. Du kannst jedes Kodi in deinem lokalen Netzwerk überwachen lassen.",
 		"support_label_title" : "Unterstütze Hyperion",
