--- a/assets/webconfig/lang/de.json
+++ b/assets/webconfig/lang/de.json
@@ -9,45 +9,78 @@
 		"general_country_nl" : "Niederlande",
 		"general_speech_de" : "Deutsch",
 		"general_speech_en" : "Englisch",
+		"general_comp_SMOOTHING" : "Glättung",
+		"general_comp_BLACKBORDER" : "Schwarze Balken Erkennung",
+		"general_comp_KODICHECKER" : "Kodi Überwachung",
+		"general_comp_FORWARDER" : "JSON/PROTO Weiterleitung",
+		"general_comp_UDPLISTENER" : "UDP Listener",
+		"general_comp_BOBLIGHTSERVER" : "Boblight Server",
+		"general_comp_GRABBER" : "Plattform Aufnahme",
+		"general_comp_V4L" : "USB Aufnahme",
+		"general_button_savesettings" : "Einstellungen speichern",
 		"dashboard_label_intro" : "Das Dashboard zeigt dir Informationen zum Systemstatus, ob Updates verfügbar sind, den Komponentenstatus sowie die letzten Blog-Posts vom Hyperion Team.",
-		"dashboard_label_infobox_title" : "Informationen",
-		"dashboard_label_infobox_currenthyp" : "Deine Hyperion Version:",
-		"dashboard_label_infobox_latesthyp" : "Aktuellste Hyperion Version:",
-		"dashboard_label_infobox_leddevice" : "LED Typ:",
-		"dashboard_label_infobox_device" : "Systeminformation:",
-		"dashboard_label_componentbox_title" : "Komponenten Status",
-		"dashboard_label_newsbox_title" : "Die letzten Blogposts",
-		"dashboard_message_infobox_updatewarning" : "Eine aktuellere Version von Hyperion ist verfügbar!",
-		"dashboard_message_infobox_updatesuccess" : "Du nutzt die aktuellste Version von Hyperion.",
+		"dashboard_infobox_label_title" : "Informationen",
+		"dashboard_infobox_label_currenthyp" : "Deine Hyperion Version:",
+		"dashboard_infobox_label_latesthyp" : "Aktuellste Hyperion Version:",
+		"dashboard_infobox_label_leddevice" : "LED Typ:",
+		"dashboard_infobox_label_device" : "Systeminformation:",
+		"dashboard_infobox_message_updatewarning" : "Eine aktuellere Version von Hyperion ist verfügbar!",
+		"dashboard_infobox_message_updatesuccess" : "Du nutzt die aktuellste Version von Hyperion.",
+		"dashboard_componentbox_label_title" : "Komponenten Status",
+		"dashboard_componentbox_label_comp" : "Komponente",
+		"dashboard_componentbox_label_status" : "Status",
+		"dashboard_newsbox_label_title" : "Die letzten Blogposts",
+		"dashboard_alert_message_confedit" : "Deine Hyperion Konfiguration wurde verändert. Um die Änderungen anzuwenden, starte Hyperion neu.",
+		"dashboard_alert_button_restarthyerion" : "Hyperion neustarten",
 		"main_menu_dashboard_token" : "Dashboard",
 		"main_menu_configuration_token" : "Konfiguration",
+		"main_menu_leds_conf_token" : "LED Hardware",
+		"main_menu_grabber_conf_token" : "Aufnahme Hardware",
+		"main_menu_effect_conf_token" : "Effekte",
+		"main_menu_colors_conf_token" : "Bildverarbeitung",
 		"main_menu_kodiwatch_token" : "Kodi Überwachung",
-		"main_menu_huebridge_token" : "Hue Bridge",
+		"main_menu_network_conf_token" : "Netzwerk",
 		"main_menu_remotecontrol_token" : "Fernbedienung",
-		"main_menu_colors_token" : "Farben",
-		"main_menu_effects_token" : "Effekte",
-		"main_menu_component_token" : "Komponenten",
 		"main_menu_support_token" : "Hilfe",
 		"main_menu_update_token" : "Update",
 		"main_menu_system_token" : "System",
 		"main_menu_input_selection_token" : "Eingabeauswahl",
-		"main_menu_general_conf_token" : "Allgemein",
-		"main_menu_leds_conf_token" : "LEDs",
-		"main_menu_grabber_conf_token" : "Aufnahme Hardware",
-		"remote_colors_label_color" : "Farbe: ",
-		"remote_colors_button_reset" : "Farbe zurücksetzen",
+		"conf_effects_label_intro" : "Stelle einen Effekt oder Farbe ein, der beim Starten sichtbar sein soll. Stelle einen Hintergrundeffekt/Farbe ein der erst sichtbar wird, wenn alle Bildquellen abgeschaltet sind (Das gilt ebenfalls für temporäres abschalten mithilfe der Kodi Überwachung).",
+		"conf_leds_label_intro" : "Der LED Hardware bereich ermöglicht eine Vielzahl von Ausgabemöglichkeiten über Raspberry Pi GPIO, USB oder Netzwerk. Erstelle ein LED Layout das zu deinem Aufbau passt und schon kann es losgehen!",
+		"conf_leds_nav_label_ledcontroller" : "LED Steuerung",
+		"conf_leds_nav_label_ledlayout" : "LED Layout",
+		"conf_leds_nav_label_ledtesting" : "LED Test",
+		"conf_leds_contr_label_contrtype" : "Steuerungstyp:",
+		"conf_leds_layout_frame" : "Klassisches Layout (Rahmen)",
+		"conf_leds_layout_matrix" : "Matrix Layout (LED Wand)",
+		"conf_leds_layout_generatedconf" : "Generierte Konfiguration",
+		"conf_leds_layout_button_validateconf" : "Überprüfe Syntax",
+		"conf_leds_test_button_toggleleds" : "LEDs",
+		"conf_leds_test_button_togglelednumber" : "LED Nummern",
+		"conf_leds_test_button_toggleliveleds" : "LED Echtzeitansicht",
+		"conf_grabber_label_intro" : "Hyperion unterstützt 2 Hauptarten wie Bilder aufgenommen werden können. Zum Einen die Plattform Aufnahme, die sich direkt am System bedient auf dem Hyperion läuft (beste Qualität). Zum Anderen die USB Aufnahme, die sich an einem angeschlossenen Gerät bedient die benötigten Informationen für die Verarbeitung und Ausgabe zu erhalten (Mehr Konfigurationsaufwand und Kalibrierung)",
+		"conf_colors_label_intro" : "Neben der Farbkalibrierung, gehört auch die Glättung (sanfte Farbübergänge) und die Erkennung von störenden (schwarzen) Balken zur Bildverarbeitung.",
+		"conf_network_label_intro" : "Alle Einstellungen zu Ports, der Weiterleitung von JSON/PROTO und Boblight sowie UDP Listener.",
+		"conf_kodi_label_title" : "Kodi Überwachung",
+		"conf_kodi_label_intro" : "Die Kodi Überwachung ermöglicht es dir abhängig von dem Kodi Status dein ambient light an oder abzuschalten. Dies ist nicht limitiert auf das selbe Gerät. Du kannst jedes Kodi in deinem lokalen Netzwerk überwachen lassen.",
+		"remote_label_intro" : "Die Fernbedienung ermöglicht dir während Hyperion läuft Farbe/Effekte zu starten/setzen, aber auch eine Quelle manuell festzulegen. Die Komponentensteuerung ermöglicht es dir gezielt Teile von Hyperion zu aktivieren/deaktivieren. Beachte, dass nach einem Neustart die hier durchgeführten Aktionen wieder zurückgesetzt werden.",
+		"remote_colors_label_coloreffect" : "Farbe/Effekt:",
+		"remote_colors_button_reset" : "Farbe/Effekt zurücksetzen",
+		"remote_colors_label_color" : "Farbe:",
+		"remote_effects_label_effects" : "Effekt:",
+		"remote_input_label_sourceselection" : "Quellenauswahl",
+		"remote_input_label_autoselect" : "Automatische Auswahl",
+		"remote_components_label_components" : "Komponentensteuerung",
+		
 		"remote_effects_intro" : "Die Effekt-Fernbedienung ermöglicht es dir Effekte zu starten für Demonstrations- oder Testzwecke. Vergessse nicht den Effekt wieder zu stoppen, wenn du fertig bist.",
-		"remote_effects_label_effects" : "Effekte",
-		"remote_effects_label_stopeffect" : "Stoppe Effekte",
 		"remote_components_intro" : "Die Komponenten-Fenbedienung ermöglicht es dir Komponenten von Hyperion zu starten und stoppen. Beachte: Dies ist nur temporär und geht nach einem Neustart verloren. Möchtest du dauerhaft Komponenten aktivieren/deaktivieren benutze die Konfigurationsseiten.",
+		
 		"hue_button_create_user_token" : "Benutzer anlegen",
 		"hue_press_link_modal" : "Bitte Link Taste auf der Hue Bridge drücken.",
 		"hue_failure_connection_token" : "Connection Timeout. Bitte drücke die Taste rechtzeitig.",
 		"hue_button_pair" : "Verbinden",
 		"hue_failure_ip_token" : "Bitte überprüfe deine IP Adresse.",
 		"hue_label_username" : "Benutzername:",
-		"conf_kodi_label_title" : "Kodi Überwachung",
-		"conf_kodi_label_intro" : "Die Kodi Überwachung ermöglicht es dir abhängig von dem Kodi Status dein ambient light an oder abzuschalten. Dies ist nicht limitiert auf das selbe Gerät. Du kannst jedes Kodi in deinem lokalen Netzwerk überwachen lassen.",
 		"support_label_title" : "Unterstütze Hyperion",
 		"support_label_intro" : "Hyperion ist ein kostenloses Open Source Projekt und ein kleines Team arbeitet an seiner Weiterentwicklung. Darum benötigen wir DEINE Unterstützung um den Ball weiter rollen zu lassen und um weiter in bessere Infrastruktur und Weiterentwicklung investieren zu können.",
 		"support_label_spreadtheword" : "Weitersagen!",
@@ -73,7 +106,14 @@
 		"update_button_install" : "Installieren",
 		"update_button_changelog" : "Zeige Änderungsprotokoll",
 		"update_label_type" : "Art:",
-		"remote_general_conf_intro" : "Hier kannst du allgemeine Einstellungen von Hyperion vornehmen."
+		"info_conlost_label_title" : "Verbindung zum Hyperion Service unterbrochen!",
+		"info_conlost_label_reason" : "Mögliche Ursachen:",
+		"info_conlost_label_reason1" : "- Hyperion startet neu",
+		"info_conlost_label_reason2" : "- Ein Update wird durchgeführt",
+		"info_conlost_label_reason3" : "- Hyperion wird nicht mehr ausgeführt",
+		"info_conlost_label_autorecon" : "Du wirst verbunden, sobald Hyperion wieder verfügbar ist",
+		"info_conlost_label_autorefresh" : "Diese Seite wird automatisch aktualisiert",
+		"info_conlost_label_reload" : "Wenn nicht, klicke hier"
 	},
 	"regex": [
 		["^Something at start of text", ""],
