--- a/assets/webconfig/lang/de.json
+++ b/assets/webconfig/lang/de.json
@@ -41,6 +41,7 @@
 		"main_menu_kodiwatch_token" : "Kodi Überwachung",
 		"main_menu_network_conf_token" : "Netzwerk",
 		"main_menu_remotecontrol_token" : "Fernbedienung",
+		"main_menu_effectsconfigurator_token" : "Effekt Konfigurator",
 		"main_menu_support_token" : "Hilfe",
 		"main_menu_update_token" : "Update",
 		"main_menu_system_token" : "System",
@@ -81,6 +82,11 @@
 		"hue_button_pair" : "Verbinden",
 		"hue_failure_ip_token" : "Bitte überprüfe deine IP Adresse.",
 		"hue_label_username" : "Benutzername:",
+		"effectsconfigurator_label_intro" : "Erstelle auf Grundlage der Basiseffekte neue Effekt die nach deinen Wünschen angepasst sind. Je nach Effekt stehen Optionen wie Farbe, Geschwindigkeit, oder Richtung und vieles mehr zur Auswahl.",
+		"effectsconfigurator_label_chooseeff" : "Basis-Effekt auswählen:",
+		"effectsconfigurator_button_saveeffect" : "Effekt speichern",
+		"effectsconfigurator_label_effectname" : "Effektname:",
+		"effectsconfigurator_button_testeffect" : "Effekt testen (nicht implementiert)",
 		"support_label_title" : "Unterstütze Hyperion",
 		"support_label_intro" : "Hyperion ist ein kostenloses Open Source Projekt und ein kleines Team arbeitet an seiner Weiterentwicklung. Darum benötigen wir DEINE Unterstützung um den Ball weiter rollen zu lassen und um weiter in bessere Infrastruktur und Weiterentwicklung investieren zu können.",
 		"support_label_spreadtheword" : "Weitersagen!",
