--- a/assets/webconfig/lang/de.json
+++ b/assets/webconfig/lang/de.json
@@ -86,7 +86,9 @@
 		"effectsconfigurator_label_chooseeff" : "Basis-Effekt auswählen:",
 		"effectsconfigurator_button_saveeffect" : "Effekt speichern",
 		"effectsconfigurator_label_effectname" : "Effektname:",
-		"effectsconfigurator_button_testeffect" : "Effekt testen",
+		"effectsconfigurator_button_starttest" : "Starte Effekttest",
+		"effectsconfigurator_button_stoptest" : "Stoppe Effekttest",
+		"effectsconfigurator_button_conttest" : "Fortlaufender Test",
 		"support_label_title" : "Unterstütze Hyperion",
 		"support_label_intro" : "Hyperion ist ein kostenloses Open Source Projekt und ein kleines Team arbeitet an seiner Weiterentwicklung. Darum benötigen wir DEINE Unterstützung um den Ball weiter rollen zu lassen und um weiter in bessere Infrastruktur und Weiterentwicklung investieren zu können.",
 		"support_label_spreadtheword" : "Weitersagen!",
