--- a/assets/webconfig/lang/de.json
+++ b/assets/webconfig/lang/de.json
@@ -75,6 +75,7 @@
 		"conf_leds_layout_cl_vleddepth" : "Vertikale LED Tiefe",
 		"conf_leds_layout_cl_generate" : "Generiere Konfiguartion",
 		"conf_leds_layout_cl_edgegap" : "Rahmenabstand",
+		"conf_leds_layout_cl_cornergap" : "Eckabstand",
 		"conf_leds_layout_ma_horiz" : "Horizontal",
 		"conf_leds_layout_ma_vert" : "Vertical",
 		"conf_leds_layout_ma_cabling" : "Verkabelung",
@@ -91,7 +92,7 @@
 		"conf_leds_layout_textf1" : "Das Textfeld zeigt dir dein aktuell geladenes Layout, sofern du kein neues Layout mit den Optionen oben erstellt hast. Optional kann man die Werte hier weiter bearbeiten.",
 		"conf_leds_layout_textf2" : "Vergiss nicht zu speichern!",
 		"conf_leds_test_button_toggleleds" : "LEDs",
-		"conf_leds_test_button_togglelednumber" : "LED Nummern",
+		"conf_leds_test_button_togglelednumber" : "LED Nummerierung",
 		"conf_leds_test_button_toggleliveleds" : "LED Echtzeitansicht",
 		"conf_grabber_label_intro" : "Hyperion unterstützt 2 Hauptarten wie Bilder aufgenommen werden können. Zum Einen die Plattform Aufnahme, die sich direkt am System bedient auf dem Hyperion läuft (beste Qualität). Zum Anderen die USB Aufnahme, die sich an einem angeschlossenen Gerät bedient die benötigten Informationen für die Verarbeitung und Ausgabe zu erhalten (Mehr Konfigurationsaufwand und Kalibrierung)",
 		"conf_colors_label_intro" : "Neben der Farbkalibrierung, gehört auch die Glättung (sanfte Farbübergänge) und die Erkennung von störenden (schwarzen) Balken zur Bildverarbeitung.",
