Small translation changes  (#312)
* Small translation changes

No more words needed.

* Encoding fix.

* Encoding

--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -128,10 +128,7 @@
 		"remote_components_label_components" : "Components control",
 		"remote_optgroup_usreffets" : "User Effects",
 		"remote_optgroup_syseffets" : "Provided Effects",
-		
-		"remote_effects_intro" : "Die Effekt-Fernbedienung ermöglicht es dir Effekte zu starten für Demonstrations- oder Testzwecke. Vergessse nicht den Effekt wieder zu stoppen, wenn du fertig bist.",
-		"remote_components_intro" : "Die Komponenten-Fenbedienung ermöglicht es dir Komponenten von Hyperion zu starten und stoppen. Beachte: Dies ist nur temporär und geht nach einem Neustart verloren. Möchtest du dauerhaft Komponenten aktivieren/deaktivieren benutze die Konfigurationsseiten.",
-		
+    "remote_help_text" : "Hyperion uses a priority system to select a source. Everything you set has a priority (Effect/Color/Platform capture/USB capture and network sources). By default, Hyperion select sources depending on priority (lowest number reflects the current active source). Now you have the opportunity to select sources on your own.",
 		"hue_button_create_user_token" : "Create User",
 		"hue_press_link_modal" : "Please press link button on the Hue Bridge.",
 		"hue_failure_connection_token" : "Connection Timeout. Please press the button in time.",
@@ -140,6 +137,7 @@
 		"hue_failure_ip_token" : "Please check your IP Address.",
 		"hue_label_username" : "Hue Bridge Username",
 		"hue_label_ip" : "Hue Bridge IP:",
+    "hue_help_text" : "With this Setup Helper you can get a new User for your Hue Bridge and you can see your Lights with the IDs for Hyperion Configuration. If you already have a working User you will see it below. But you can always create a new one as well. Remember: This is only a helper. You have to copy and paste them in your config above.",
 		"effectsconfigurator_label_intro" : "Create out of the base effects new effects that are tuned to your liking. Depending on Effect there are options like color, speed, direction and more available.",
 		"effectsconfigurator_label_chooseeff" : "Choose Base-Effect:",
 		"effectsconfigurator_button_saveeffect" : "Save Effect",
@@ -158,7 +156,7 @@
 		"support_label_yttext" : "Bored from pictures? Checkout our Youtube channel!",
 		"support_label_donate" : "Donate or use our affiliate links",
 		"support_label_affinstr1" : "Click on the appropriate link of your country",
-		"support_label_affinstr2" : "Everything you buy (doesn’t matter what) we get a small fee based on your turnover",
+		"support_label_affinstr2" : "Everything you buy (doesn't matter what) we get a small fee based on your turnover",
 		"support_label_affinstr3" : "You ALWAYS pay the same price, there is absolutely no difference. Try it out!",
 		"support_label_btctext" : "Address:",
 		"support_label_donationpp" : "Donation:",
@@ -365,7 +363,7 @@
 		"edt_append_hz" : "Hz",
 		"edt_append_pixel" : "Pixel",
 		"edt_append_percent" : "%",
-		"edt_append_degree" : "°",
+		"edt_append_degree" : "Â°",
 		"edt_append_sdegree" : "s/degree",
 		"edt_append_leds" : "LEDs",
 		"edt_msg_error_notset" : "Property must be set",
