--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -17,6 +17,8 @@
 		"general_country_nl" : "Netherlands",
 		"general_speech_de" : "German",
 		"general_speech_en" : "English",
+		"general_access_default" : "Default",
+		"general_access_expert" : "Expert",
 		"general_comp_SMOOTHING" : "Smoothing",
 		"general_comp_BLACKBORDER" : "Blackbar Detection",
 		"general_comp_KODICHECKER" : "Kodi Watch",
@@ -26,6 +28,9 @@
 		"general_comp_GRABBER" : "Platform Capture",
 		"general_comp_V4L" : "USB Capture",
 		"general_button_savesettings" : "Save settings",
+		"general_btn_ok" : "OK",
+		"general_btn_abort" : "Abort",
+		"general_btn_save" : "Save",
 		"dashboard_label_intro" : "The dashboard give you a quick overview about the status of Hyperion and show you the latest news of the Hyperion Blog.",
 		"dashboard_infobox_label_title" : "Information",
 		"dashboard_infobox_label_currenthyp" : "Your Hyperion version:",
@@ -55,6 +60,7 @@
 		"main_menu_system_token" : "System",
 		"main_menu_input_selection_token" : "Eingabeauswahl",
 		"main_menu_logging_token" : "Log",
+		"main_menu_webconfig_token" : "Webconfiguration",
 		"conf_effects_label_intro" : "Setting up a booteffect/color that is visible after Hyperion startup. Configure a background effect/color which is active, when all capture sources are disabled (also temporarily via Kodi Watch)",
 		"conf_leds_label_intro" : "The LED controller of youre choice is your way to output the led data via Raspberry PI GPIO, USB or network! Choose one, define your led layout and enjoy the light!",
 		"conf_leds_nav_label_ledcontroller" : "LED Controller",
@@ -78,7 +84,6 @@
 		"conf_leds_layout_preview_originTEXT" : "Created from: Textfield",
 		"conf_leds_layout_preview_originMA" : "Created from: Matrix Layout(LED wall)",
 		"conf_leds_layout_preview_totalleds" : "Totel LEDs: $1",
-		"conf_leds_layout_preview_empty" : "Es wurde keine Vorschau angefordert",
 		"conf_leds_layout_cl_top" : "Top",
 		"conf_leds_layout_cl_bottom" : "Bottom",
 		"conf_leds_layout_cl_left" : "Left",
@@ -105,7 +110,7 @@
 		"conf_leds_layout_ma_opttopright" : "Top right",
 		"conf_leds_layout_ma_optbottomleft" : "Bottom left",
 		"conf_leds_layout_ma_optbottomright" : "Bottom right",
-		"conf_leds_layout_textf1" : "This textfield shows by default your current loaded layout and will be overwritten if you generate a new one above. Optional you could perform further edits.",
+		"conf_leds_layout_textf1" : "This textfield shows by default your current loaded layout and will be overwritten if you generate a new one with the options below. Optional you could perform further edits.",
 		"conf_leds_layout_textf2" : "Don't forget to save!",
 		"conf_leds_test_button_toggleleds" : "toggle leds",
 		"conf_leds_test_button_togglelednumber" : "toggle led numbers",
@@ -118,6 +123,7 @@
 		"conf_logging_label_intro" : "Area to check log messages, depending on loglevel setting you see more or less information.",
 		"conf_logging_btn_pbupload" : "Upload log",
 		"conf_logging_btn_autoscroll" : "Auto scrolling",
+		"conf_webconfig_label_intro" : "Webconfiguration settings. Edit wisely.",
 		"remote_label_intro" : "Set an effect/color. You could also select a source manually. The Components control give the opportunity to enable/disable components of Hyprion during runtime. All changes you made here are lost after a restart.",
 		"remote_colors_label_coloreffect" : "Colors/Effects",
 		"remote_colors_button_reset" : "Reset Color/Effect",
@@ -128,7 +134,7 @@
 		"remote_components_label_components" : "Components control",
 		"remote_optgroup_usreffets" : "User Effects",
 		"remote_optgroup_syseffets" : "Provided Effects",
-    "remote_help_text" : "Hyperion uses a priority system to select a source. Everything you set has a priority (Effect/Color/Platform capture/USB capture and network sources). By default, Hyperion select sources depending on priority (lowest number reflects the current active source). Now you have the opportunity to select sources on your own.",
+		"remote_help_text" : "Hyperion uses a priority system to select a source. Everything you set has a priority (Effect/Color/Platform capture/USB capture and network sources). By default, Hyperion select sources depending on priority (lowest number reflects the current active source). Now you have the opportunity to select sources on your own.",
 		"hue_button_create_user_token" : "Create User",
 		"hue_press_link_modal" : "Please press link button on the Hue Bridge.",
 		"hue_failure_connection_token" : "Connection Timeout. Please press the button in time.",
@@ -137,7 +143,7 @@
 		"hue_failure_ip_token" : "Please check your IP Address.",
 		"hue_label_username" : "Hue Bridge Username",
 		"hue_label_ip" : "Hue Bridge IP:",
-    "hue_help_text" : "With this Setup Helper you can get a new User for your Hue Bridge and you can see your Lights with the IDs for Hyperion Configuration. If you already have a working User you will see it below. But you can always create a new one as well. Remember: This is only a helper. You have to copy and paste them in your config above.",
+		"hue_help_text" : "With this Setup Helper you can get a new User for your Hue Bridge and you can see your Lights with the IDs for Hyperion Configuration. If you already have a working User you will see it below. But you can always create a new one as well. Remember: This is only a helper. You have to copy and paste them in your config above.",
 		"effectsconfigurator_label_intro" : "Create out of the base effects new effects that are tuned to your liking. Depending on Effect there are options like color, speed, direction and more available.",
 		"effectsconfigurator_label_chooseeff" : "Choose Base-Effect:",
 		"effectsconfigurator_button_saveeffect" : "Save Effect",
@@ -190,6 +196,10 @@
 		"infoDialog_effconf_created_text" : "The effect $1 has been created successfully!",
 		"infoDialog_effconf_invalidvalue_title" : "INVALID VALUE(S)",
 		"infoDialog_effconf_invalidvalue_text" : "Please check for red marked input(s) and try again!",
+		"InfoDialog_lang_title" : "Language setting",
+		"InfoDialog_lang_text" : "If you don't like the result of the automatic language detection you could overwrite it here.",
+		"InfoDialog_access_title" : "Level setting",
+		"InfoDialog_access_text" : "Depending on settings level you could change more or less settings. Recommended is the default level.",
 		"edt_dev_general_heading_title" : "General Settings",
 		"edt_dev_general_name_title" : "Configuration name",
 		"edt_dev_general_ledCount_title" : "Count of all hardware LEDs",
