--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -17,6 +17,8 @@
 		"general_country_nl" : "Niederlande",
 		"general_speech_de" : "Deutsch",
 		"general_speech_en" : "Englisch",
+		"general_access_default" : "Standard",
+		"general_access_expert" : "Experte",
 		"general_comp_SMOOTHING" : "Glättung",
 		"general_comp_BLACKBORDER" : "Schwarze Balken Erkennung",
 		"general_comp_KODICHECKER" : "Kodi Überwachung",
@@ -26,6 +28,9 @@
 		"general_comp_GRABBER" : "Plattform Aufnahme",
 		"general_comp_V4L" : "USB Aufnahme",
 		"general_button_savesettings" : "Einstellungen speichern",
+		"general_btn_ok" : "OK",
+		"general_btn_abort" : "Abbrechen",
+		"general_btn_save" : "Speichern",
 		"dashboard_label_intro" : "Das Dashboard zeigt dir Informationen zum Systemstatus, ob Updates verfügbar sind, den Komponentenstatus sowie die letzten Blog-Posts vom Hyperion Team.",
 		"dashboard_infobox_label_title" : "Information",
 		"dashboard_infobox_label_currenthyp" : "Deine Hyperion Version:",
@@ -55,6 +60,7 @@
 		"main_menu_system_token" : "System",
 		"main_menu_input_selection_token" : "Eingabeauswahl",
 		"main_menu_logging_token" : "Protokoll",
+		"main_menu_webconfig_token" : "Webkonfiguration",
 		"conf_effects_label_intro" : "Stelle einen Effekt oder Farbe ein, der beim Starten sichtbar sein soll. Stelle einen Hintergrundeffekt/Farbe ein der erst sichtbar wird, wenn alle Bildquellen abgeschaltet sind (Das gilt ebenfalls für temporäres abschalten mithilfe der Kodi Überwachung).",
 		"conf_leds_label_intro" : "Der LED Hardware Bereich ermöglicht eine Vielzahl von Ausgabemöglichkeiten über Raspberry Pi GPIO, USB oder Netzwerk. Erstelle ein LED Layout das zu deinem Aufbau passt und schon kann es losgehen!",
 		"conf_leds_nav_label_ledcontroller" : "LED Steuerung",
@@ -78,7 +84,6 @@
 		"conf_leds_layout_preview_originTEXT" : "Erstellt von: Textfeld",
 		"conf_leds_layout_preview_originMA" : "Erstellt von: Matrix Layout (LED Wand)",
 		"conf_leds_layout_preview_totalleds" : "LEDs gesamt: $1",
-		"conf_leds_layout_preview_empty" : "Es wurde keine Vorschau angefordert",
 		"conf_leds_layout_cl_top" : "Oben",
 		"conf_leds_layout_cl_bottom" : "Unten",
 		"conf_leds_layout_cl_left" : "Links",
@@ -105,7 +110,7 @@
 		"conf_leds_layout_ma_opttopright" : "Oben rechts",
 		"conf_leds_layout_ma_optbottomleft" : "Unten links",
 		"conf_leds_layout_ma_optbottomright" : "Unten rechts",
-		"conf_leds_layout_textf1" : "Das Textfeld zeigt dir dein aktuell geladenes Layout, sofern du kein neues Layout mit den Optionen oben erstellt hast. Optional kann man die Werte hier weiter bearbeiten.",
+		"conf_leds_layout_textf1" : "Das Textfeld zeigt dir dein aktuell geladenes Layout, sofern du kein neues Layout mit den Optionen unten erstellt hast. Optional kann man die Werte hier weiter bearbeiten.",
 		"conf_leds_layout_textf2" : "Vergiss nicht zu speichern!",
 		"conf_leds_test_button_toggleleds" : "LEDs",
 		"conf_leds_test_button_togglelednumber" : "LED Nummerierung",
@@ -118,6 +123,7 @@
 		"conf_logging_label_intro" : "Überprüfe die Meldungen im Prokotoll um zu erfahren was Hyperion gerade beschäftigt. Je nach eingestellter Protokoll-Stufe siehst du mehr oder weniger Informationen.",
 		"conf_logging_btn_pbupload" : "Protokoll hochladen",
 		"conf_logging_btn_autoscroll" : "Automatisch scrollen",
+		"conf_webconfig_label_intro" : "Einstellungen zur Webkonfiguration. Änderungen können die Erreichbarkeit des Webinterfaces beeinflussen.",
 		"remote_label_intro" : "Die Fernbedienung ermöglicht dir während Hyperion läuft Farbe/Effekte zu starten/setzen, aber auch eine Quelle manuell festzulegen. Die Komponentensteuerung ermöglicht es dir gezielt Teile von Hyperion zu aktivieren/deaktivieren. Beachte, dass nach einem Neustart die hier durchgeführten Aktionen wieder zurückgesetzt werden.",
 		"remote_colors_label_coloreffect" : "Farbe/Effekt:",
 		"remote_colors_button_reset" : "Farbe/Effekt zurücksetzen",
@@ -128,7 +134,7 @@
 		"remote_components_label_components" : "Komponentensteuerung",
 		"remote_optgroup_usreffets" : "Benutzer Effekte",
 		"remote_optgroup_syseffets" : "Mitgelieferte Effekte",
-    "remote_help_text" : "Hyperion nutzt ein Prioritätensystem um die Quelle zu wählen. Alles was du setzte hat eine Prioität (Effekte/Farben/Plattform Capture/USB Capture und Netzwerkquellen). Standartmäßig nutzt Hyperion die Quelle mit der niedrigsten Prioität. Hier hast du die Möglichkeit die Quelle manuell auszuwählen.",
+		"remote_help_text" : "Hyperion nutzt ein Prioritätensystem um die Quelle zu wählen. Alles was du setzte hat eine Prioität (Effekte/Farben/Plattform Capture/USB Capture und Netzwerkquellen). Standartmäßig nutzt Hyperion die Quelle mit der niedrigsten Prioität. Hier hast du die Möglichkeit die Quelle manuell auszuwählen.",
 		"hue_button_create_user_token" : "Benutzer anlegen",
 		"hue_press_link_modal" : "Bitte Link Taste auf der Hue Bridge drücken.",
 		"hue_failure_connection_token" : "Connection Timeout. Bitte drücke die Taste rechtzeitig.",
@@ -137,7 +143,7 @@
 		"hue_failure_ip_token" : "Bitte überprüfe deine IP Adresse.",
 		"hue_label_username" : "Benutzername:",
 		"hue_label_ip" : "Hue Bridge IP:",
-    "hue_help_text" : "Mit diesem Setupassistenten kannst du einen neuen User auf der Hue Bridge anlegen und deine LightIDs für die Hyperion Konfiguration herausfinden. Wenn du bereits einen eingetragenen User hast, siehst du diesen bereits untenstehend eingetragen. Du kannst allerdings jederzeit einen neuen Anlegen. Beachte: Dies ist nur ein Assistent. Du musst die Daten in die Konfiguration kopieren.",
+		"hue_help_text" : "Mit diesem Setupassistenten kannst du einen neuen User auf der Hue Bridge anlegen und deine LightIDs für die Hyperion Konfiguration herausfinden. Wenn du bereits einen eingetragenen User hast, siehst du diesen bereits untenstehend eingetragen. Du kannst allerdings jederzeit einen neuen Anlegen. Beachte: Dies ist nur ein Assistent. Du musst die Daten in die Konfiguration kopieren.",
 		"effectsconfigurator_label_intro" : "Erstelle auf Grundlage der Basiseffekte neue Effekt die nach deinen Wünschen angepasst sind. Je nach Effekt stehen Optionen wie Farbe, Geschwindigkeit, oder Richtung und vieles mehr zur Auswahl.",
 		"effectsconfigurator_label_chooseeff" : "Basis-Effekt auswählen:",
 		"effectsconfigurator_button_saveeffect" : "Effekt speichern",
@@ -190,6 +196,10 @@
 		"infoDialog_effconf_created_text" : "Der Effekt $1 wurde erfolgreich erstellt!",
 		"infoDialog_effconf_invalidvalue_title" : "Fehlerhafte Werte!",
 		"infoDialog_effconf_invalidvalue_text" : "Es wurden unzulässige Werte eingetragen, überprüfe das rot markierte Feld und versuche es erneut!",
+		"InfoDialog_lang_title" : "Spracheinstellung",
+		"InfoDialog_lang_text" : "Sollte dir die Vorauswahl der automatischen Spracherkennung nicht gefallen, kannst du die Sprache hier manuell festlegen.",
+		"InfoDialog_access_title" : "Zugriffsstufe",
+		"InfoDialog_access_text" : "Abhängig von der Stufe hast du Zugriff auf mehr oder weniger Einstellungen. Empfohlen ist 'Standard'.",
 		"edt_dev_general_heading_title" : "Allgemeine Einstellungen",
 		"edt_dev_general_name_title" : "Name der Konfiguration",
 		"edt_dev_general_ledCount_title" : "Anzahl Hardware LEDs",
