Candle work... code cleanups parameter changes schema file english labels

--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -311,6 +311,7 @@
 		"edt_conf_effp_disable_itemtitle" : "Effect",
 		"edt_conf_log_heading_title" : "Logging",
 		"edt_conf_log_level_title" : "Log-Level",
+		"edt_eff_candle_header_title" : "Candle",
 		"edt_eff_police_header_title" : "Police",
 		"edt_eff_fade_header_title" : "Fade",
 		"edt_eff_rainbowmood_header_title" : "Rainbow Mood",
@@ -337,6 +338,9 @@
 		"edt_eff_fadetime_title" : "Fade time",
 		"edt_eff_colorstart_title" : "Color start",
 		"edt_eff_colorend_title" : "Color end",
+		"edt_eff_colorshift_title" : "Color Shift",
+		"edt_eff_whichleds_title" : "Which Leds",
+		"edt_eff_ledlist_title" : "Led List",
 		"edt_eff_speed_title" : "Speed",
 		"edt_eff_fadefactor_title" : "Fade factor",
 		"edt_eff_showseconds_title" : "Show seconds",
