--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -321,6 +321,7 @@
 		"edt_conf_effp_disable_itemtitle" : "Effekt",
 		"edt_conf_log_heading_title" : "Protokoll",
 		"edt_conf_log_level_title" : "Protokollstufe",
+		"edt_eff_candle_header_title" : "Kerze",
 		"edt_eff_police_header_title" : "Polizei",
 		"edt_eff_fade_header_title" : "Farbübergang",
 		"edt_eff_rainbowmood_header_title" : "Regenbogen",
@@ -347,6 +348,9 @@
 		"edt_eff_fadetime_title" : "Übergangszeit",
 		"edt_eff_colorstart_title" : "Farbe Start",
 		"edt_eff_colorend_title" : "Farbe Ende",
+		"edt_eff_colorshift_title" : "Farbverschiebung",
+		"edt_eff_whichleds_title" : "Welche LEDs",
+		"edt_eff_ledlist_title" : "LED Liste",
 		"edt_eff_speed_title" : "Geschwindigkeit",
 		"edt_eff_fadefactor_title" : "Verblass Faktor",
 		"edt_eff_showseconds_title" : "Zeige Sekunden",
