--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -47,6 +47,7 @@
 		"dashboard_alert_button_restarthyerion" : "Hyperion neustarten",
 		"main_menu_dashboard_token" : "Dashboard",
 		"main_menu_configuration_token" : "Konfiguration",
+		"main_menu_general_conf_token" : "Allgemein",
 		"main_menu_leds_conf_token" : "LED Hardware",
 		"main_menu_grabber_conf_token" : "Aufnahme Hardware",
 		"main_menu_effect_conf_token" : "Effekte",
@@ -60,7 +61,9 @@
 		"main_menu_system_token" : "System",
 		"main_menu_input_selection_token" : "Eingabeauswahl",
 		"main_menu_logging_token" : "Protokoll",
-		"main_menu_webconfig_token" : "Webkonfiguration",
+		"main_menu_webconfig_token" : "Web konfiguration",
+		"conf_general_label_title" : "All Einstellungen",
+		"conf_general_label_intro" : " ",
 		"conf_effects_label_intro" : "Stelle einen Effekt oder Farbe ein, der beim Starten sichtbar sein soll. Stelle einen Hintergrundeffekt/Farbe ein der erst sichtbar wird, wenn alle Bildquellen abgeschaltet sind (Das gilt ebenfalls für temporäres abschalten mithilfe der Kodi Überwachung).",
 		"conf_leds_label_intro" : "Der LED Hardware Bereich ermöglicht eine Vielzahl von Ausgabemöglichkeiten über Raspberry Pi GPIO, USB oder Netzwerk. Erstelle ein LED Layout das zu deinem Aufbau passt und schon kann es losgehen!",
 		"conf_leds_nav_label_ledcontroller" : "LED Steuerung",
@@ -201,8 +204,9 @@
 		"InfoDialog_lang_text" : "Sollte dir die Vorauswahl der automatischen Spracherkennung nicht gefallen, kannst du die Sprache hier manuell festlegen.",
 		"InfoDialog_access_title" : "Zugriffsstufe",
 		"InfoDialog_access_text" : "Abhängig von der Stufe hast du Zugriff auf mehr oder weniger Einstellungen. Empfohlen ist 'Standard'.",
+		"edt_general_heading_title" : "Allgemeine Einstellungen",
+		"edt_general_name_title" : "Name der Konfiguration",
 		"edt_dev_general_heading_title" : "Allgemeine Einstellungen",
-		"edt_dev_general_name_title" : "Name der Konfiguration",
 		"edt_dev_general_ledCount_title" : "Anzahl Hardware LEDs",
 		"edt_dev_general_colorOrder_title" : "RGB Byte Reihenfolge",
 		"edt_dev_general_rewriteTime_title" : "Aktualisierungszeit",
