--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -47,6 +47,7 @@
 		"dashboard_alert_button_restarthyerion" : "Restart Hyperion",
 		"main_menu_dashboard_token" : "Dashboard",
 		"main_menu_configuration_token" : "Configuration",
+		"main_menu_general_conf_token" : "General",
 		"main_menu_leds_conf_token" : "LED Hardware",
 		"main_menu_grabber_conf_token" : "Capturing Hardware",
 		"main_menu_effect_conf_token" : "Effects",
@@ -58,9 +59,11 @@
 		"main_menu_support_token" : "Support",
 		"main_menu_update_token" : "Update",
 		"main_menu_system_token" : "System",
-		"main_menu_input_selection_token" : "Eingabeauswahl",
+		"main_menu_input_selection_token" : "Input Selection",
 		"main_menu_logging_token" : "Log",
-		"main_menu_webconfig_token" : "Webconfiguration",
+		"main_menu_webconfig_token" : "Web configuration",
+		"conf_general_label_title" : "General setings",
+		"conf_general_label_intro" : " ",
 		"conf_effects_label_intro" : "Setting up a booteffect/color that is visible after Hyperion startup. Configure a background effect/color which is active, when all capture sources are disabled (also temporarily via Kodi Watch)",
 		"conf_leds_label_intro" : "The LED controller of youre choice is your way to output the led data via Raspberry PI GPIO, USB or network! Choose one, define your led layout and enjoy the light!",
 		"conf_leds_nav_label_ledcontroller" : "LED Controller",
@@ -201,6 +204,8 @@
 		"InfoDialog_lang_text" : "If you don't like the result of the automatic language detection you could overwrite it here.",
 		"InfoDialog_access_title" : "Level setting",
 		"InfoDialog_access_text" : "Depending on settings level you could change more or less settings. Recommended is the default level.",
+		"edt_general_heading_title" : "General Settings",
+		"edt_general_name_title" : "Configuration name",
 		"edt_dev_general_heading_title" : "General Settings",
 		"edt_dev_general_name_title" : "Configuration name",
 		"edt_dev_general_ledCount_title" : "Count of all hardware LEDs",
