--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -138,6 +138,9 @@
 		"remote_optgroup_usreffets" : "User Effects",
 		"remote_optgroup_syseffets" : "Provided Effects",
 		"remote_help_text" : "Hyperion uses a priority system to select a source. Everything you set has a priority (Effect/Color/Platform capture/USB capture and network sources). By default, Hyperion select sources depending on priority (lowest number reflects the current active source). Now you have the opportunity to select sources on your own.",
+		"remote_maptype_label" : "Mapping type",
+		"remote_maptype_label_multicolor_mean" : "Multicolor",
+		"remote_maptype_label_unicolor_mean" : "Unicolor",
 		"hue_button_create_user_token" : "Create User",
 		"hue_press_link_modal" : "Please press link button on the Hue Bridge.",
 		"hue_failure_connection_token" : "Connection Timeout. Please press the button in time.",
