add schema for trails

--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -428,6 +428,10 @@
 		"edt_eff_enableshutdown_title" : "Echtes herunterfahren",
 		"edt_eff_length_title" : "Länge",
 		"edt_eff_frequency_title" : "Frequenz",
+		"edt_eff_tails_header_title" : "Trails",
+		"edt_eff_min_len_title" : "Minimale Länge",
+		"edt_eff_max_len_title" : "Maximale Länge",
+		"edt_eff_height_title" : "Höhe",
 		"edt_append_ns" : "ns",
 		"edt_append_ms" : "ms",
 		"edt_append_s" : "s",
