--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -429,6 +429,10 @@
 		"edt_eff_enableshutdown_title" : "Real shutdown",
 		"edt_eff_length_title" : "Length",
 		"edt_eff_frequency_title" : "Frequency",
+		"edt_eff_tails_header_title" : "Trails",
+		"edt_eff_min_len_title" : "Minimal length",
+		"edt_eff_max_len_title" : "Maximal length",
+		"edt_eff_height_title" : "Height",
 		"edt_append_ns" : "ns",
 		"edt_append_ms" : "ms",
 		"edt_append_s" : "s",
