--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -316,9 +316,9 @@
 		"edt_conf_color_yellow" : "Gelb",
 		"edt_conf_color_gamma_red" : "Gamma rot",
 		"edt_conf_color_gamma_green" : "Gamma grün",
-		"edt_conf_color_gamma_blue" : "Gamma blue",
-		"edt_conf_color_brightness_min" : "minimale Helligkeit",
-		"edt_conf_color_brightness" : "maximale Helligkeit",
+		"edt_conf_color_gamma_blue" : "Gamma blau",
+		"edt_conf_color_brightness_min" : "Minimale Helligkeit",
+		"edt_conf_color_brightness" : "Maximale Helligkeit",
 		"edt_conf_smooth_heading_title" : "Glättung",
 		"edt_conf_smooth_type_title" : "Art",
 		"edt_conf_smooth_type_expl" : "Algorithmus der Glättung.",
