Adjustment merge + new brightness settings (#359)
* add new rgbtransform

* activate rgbtransform

* integrate new transform and gamma in adjustment, disable transform

* fix brighness limit

* advance upper and lower thresholds

* start removing color transform

* adjust configs/schema

* implement json for new color adjustment

* finish hyperion-remote extension for new adjustment settings

* fix typos

* rename luminance to brightness
fix jsonapi for new adjustment

* fix some bugs in adjustments

* fix i18n

* fix gamma via json

* now brighness values goes from 0-1 with 0.5 is the default for all brighness is equal between the channels. less 0.5 all channels scaled down
to new brighness, above 0.5 if possible channel gets brighter - but brighness is not equal between the channels anymore
brighness value curve is now exponential instead of linear - this feels more natural

* hslv cleanup

--- a/assets/webconfig/i18n/de.json
+++ b/assets/webconfig/i18n/de.json
@@ -314,6 +314,11 @@
 		"edt_conf_color_cyan" : "Cyan",
 		"edt_conf_color_magenta" : "Magenta",
 		"edt_conf_color_yellow" : "Gelb",
+		"edt_conf_color_gamma_red" : "Gamma rot",
+		"edt_conf_color_gamma_green" : "Gamma grün",
+		"edt_conf_color_gamma_blue" : "Gamma blau",
+		"edt_conf_color_brightness_min" : "Minimale Helligkeit",
+		"edt_conf_color_brightness" : "Maximale Helligkeit",
 		"edt_conf_smooth_heading_title" : "Glättung",
 		"edt_conf_smooth_type_title" : "Art",
 		"edt_conf_smooth_type_expl" : "Algorithmus der Glättung.",
