--- a/assets/webconfig/i18n/en.json
+++ b/assets/webconfig/i18n/en.json
@@ -315,6 +315,11 @@
 		"edt_conf_color_cyan" : "cyan",
 		"edt_conf_color_magenta" : "magenta",
 		"edt_conf_color_yellow" : "yellow",
+		"edt_conf_color_gamma_red" : "gamma red",
+		"edt_conf_color_gamma_green" : "gamma green",
+		"edt_conf_color_gamma_blue" : "gamma blue",
+		"edt_conf_color_brightness_min" : "minimal brightness",
+		"edt_conf_color_brightness" : "maximal brightness",
 		"edt_conf_smooth_heading_title" : "Smoothing",
 		"edt_conf_smooth_type_title" : "Type",
 		"edt_conf_smooth_type_expl" : "Type of smoothing.",
